[package]
name = "poppet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
openssl = "0.10.64"
sdl2 = "0.36.0"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
